fixed posts ascending order, css, list component/edit component alignment

--- a/angular-blog/src/app/list/list.component.css
+++ b/angular-blog/src/app/list/list.component.css
@@ -24,11 +24,9 @@ left: .1em;
 }
 .list li.selected {
 background-color: #CFD8DC;
-color: white;
 }
 .list li.selected:hover {
 background-color: #BBD8DC;
-color: white;
 }
 
 .list a {
@@ -48,7 +46,7 @@ display: inline-block;
 font-size: small;
 color: white;
 padding: 0.8em 0.7em 0 0.7em;
-background-color:#405061;
+background-color:#003399;
 line-height: 1em;
 position: relative;
 left: -1px;
